my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/WDEPRECATED_scope/T_WDEPRECATED_scope-struct.h
/* Generated by dmlc, do not edit! */

#ifndef T_WDEPRECATED_SCOPE_STRUCT_H
#define T_WDEPRECATED_SCOPE_STRUCT_H

typedef struct test test_t;

conf_class_t *_initialize_T_WDEPRECATED_scope(void);


#endif /* not T_WDEPRECATED_SCOPE_STRUCT_H */
